--- a/crearivibe.html
+++ b/crearivibe.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CreatiVibe — Workspace</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./new figma.css">
+  <link rel="stylesheet" href="../creativibe.css ">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
   <header class="site-header">
@@ -125,5 +127,75 @@
     <img src="./style/n-3.jpg">
   </div>
   
+    <div class="contain_er">
+       
+        <section class="about-us">
+            <div class="about-image">
+                <img src="./style/0ca5557bf606b78cba9f4a4783837df019dda83d.jpg" alt="Team meeting in a modern office">
+            </div>
+            <div class="about-content">
+                <h2>About Us</h2>
+                <h3>Mission Statement:</h3>
+                <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                <h3>Story/Background:</h3>
+                <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                <h3>Our Team:</h3>
+                <p>Jorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+            </div>
+        </section>
+
+        <!-- Client Reviews Section -->
+        <section class="reviews">
+            <h2>Our Client's Reviews</h2>
+            <div class="reviews-container">
+                <div class="review-card">
+                    <h4>Yasmin Harry</h4>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                </div>
+                <div class="review-card">
+                    <h4>Hassan M.</h4>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                </div>
+                <div class="review-card">
+                    <h4>Zeina Osama</h4>
+                    <div class="stars">
+                        <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                    </div>
+                    <p>Norem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer>
+        <div class="container footer-container">
+            <div class="footer-col">
+                <h4>Address</h4>
+                <p>158 Green Terrace<br>Cairo, Egypt</p>
+            </div>
+            <div class="footer-col brand-info">
+                <h3>CreatiVibe</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i>
+                </div>
+                <div class="social-icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                </div>
+            </div>
+            <div class="footer-col">
+                <h4>Contact Us</h4>
+                <p>T. 01174548355</p>
+                <p>M. contact@Creativibe.com</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
